--- a/app/src/main/res/layout/lista_personas.xml
+++ b/app/src/main/res/layout/lista_personas.xml
@@ -43,7 +43,7 @@
                                 android:id="@+id/usuario_persona"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Nombre: "
+                                android:text="Usuario: "
                                 android:textStyle="bold" />
 
                             <TextView
