--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="0dp"
+    android:paddingRight="0dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical">
@@ -42,11 +42,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="10dp"
                         />
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
-<!--<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">-->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
                              <TextView
                             android:id="@+id/Nom"
                             android:layout_width="wrap_content"
@@ -62,12 +66,7 @@
                             android:layout_height="wrap_content"
                             android:text="Pepe"
                             android:textSize="35dp" />
-<!--</LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-    -->                    <TextView
+                  <TextView
                             android:id="@+id/ape"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -85,12 +84,7 @@
                             tools:layout_editor_absoluteX="196dp"
                             tools:layout_editor_absoluteY="64dp"
                             tools:ignore="MissingConstraints" />
-       <!--             </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-           -->            <TextView
+         <TextView
 
                             android:id="@+id/usu"
                             android:layout_width="wrap_content"
@@ -109,12 +103,7 @@
                             android:textSize="35dp"
                             tools:layout_editor_absoluteX="196dp"
                             tools:layout_editor_absoluteY="6dp" />
-            <!--        </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-        -->                <TextView
+               <TextView
                             android:id="@+id/mail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -132,11 +121,7 @@
                             android:textSize="30dp"
                             tools:layout_editor_absoluteX="196dp"
                             tools:layout_editor_absoluteY="94dp" />
-           <!--         </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-               -->         <TextView
+         <TextView
                             android:id="@+id/ro"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -155,8 +140,8 @@
                         android:textSize="35dp"
                         tools:layout_editor_absoluteX="196dp"
                         tools:layout_editor_absoluteY="123dp" />
-                <!--    </LinearLayout>
--->
+                    </LinearLayout>
+                    </ScrollView>
                 </LinearLayout>
 
                 <!-- tab 2 -->
