--- a/app/src/main/res/layout/detalletodoslosusuarios.xml
+++ b/app/src/main/res/layout/detalletodoslosusuarios.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/imgPerfil"
             android:layout_width="379dp"
             android:layout_height="235dp"
             android:layout_gravity="center"
