--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -33,6 +33,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/imgPerfil"
                         android:layout_width="379dp"
                         android:layout_height="235dp"
                         android:layout_gravity="center"
